--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "logger"
   ],
   "author": "raqrobby@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "udp-transport-winston": "^1.2.10",
+    "winston": "^3.7.2"
+  }
 }
